adds the description list

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <h1>Olivia Chartrand</h1>
 </header>
 <body>
-    
+    <img src="images/IMG_1208.png.url" alt="Me at the tulip festival">
+    <h2>Description list</h2>
+    <ul>
+        <li>041098660</li>
+        <li>Interactive Media Design</li>
+        <li>MtM6201_020 Advanced Web Design with HTML & CSS</li>
+        <li>I love playing video games</li>
+    </ul>
 </body>
 </html>
