adds footer with paragraph

--- a/index.html
+++ b/index.html
@@ -18,4 +18,8 @@
         <li>I love playing video games</li>
     </ul>
 </body>
+<footer>
+    <br>
+    <p>All rights reserved, 2026</p>
+</footer>
 </html>
