adds a form and other visuals

--- a/index.html
+++ b/index.html
@@ -17,9 +17,21 @@
         <li>MtM6201_020 Advanced Web Design with HTML & CSS</li>
         <li>I love playing video games</li>
     </ul>
+    <!-- Just having fun :) -->
+    <blockquote>Cogito, ergo sum. --<cite>René Descartes</cite></blockquote>
+    <br>
+    <h3>What genre of music should I listen to?</h3>
+    <form action="thank.html" method="post">
+        <label for="rock">Rock</label>
+        <input type="checkbox" id="rock" name="rock">
+        <label for="hiphop">Hip-Hop</label>
+        <input type="checkbox" id="hiphop" name="hiphop">
+        <label for="jazz">Jazz</label>
+        <input type="checkbox" id="jazz" name="jazz">
+    </form>
 </body>
 <footer>
-    <br>
-    <p>All rights reserved, 2026</p>
+    <hr>
+    <p>All rights reserved, Olivia Chartrand 2026</p>
 </footer>
 </html>
