fixes image issue

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Olivia Chartrand</h1>
 </header>
 <body>
-    <img src="images/IMG_1208.png.url" alt="Me at the tulip festival">
+    <img src="images/Me.png" alt="Me at the tulip festival">
     <h2>Description list</h2>
     <ul>
         <li>041098660</li>
@@ -18,9 +18,10 @@
         <li>I love playing video games</li>
     </ul>
     <!-- Just having fun :) -->
+     <h3>My Favourite quote</h3>
     <blockquote>Cogito, ergo sum. --<cite>René Descartes</cite></blockquote>
     <br>
-    <h3>What genre of music should I listen to?</h3>
+    <h4>What genre of music should I listen to?</h4>
     <form action="thank.html" method="post">
         <label for="rock">Rock</label>
         <input type="checkbox" id="rock" name="rock">
