reduces image size

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Olivia Chartrand</h1>
 </header>
 <body>
-    <img src="images/Me.png" alt="Me at the tulip festival">
+    <img src="images/Me.png" alt="Me at the tulip festival" width="589" height="1278">
     <h2>Description list</h2>
     <ul>
         <li>041098660</li>
